// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HowToSearch renders freetext examples after freetext radio option is selected 1`] = `
<div>
  <div
    className="mb3 tc"
  >
    <Memo(ForwardRef)
      onChange={[Function]}
      value="freetext"
    >
      <ForwardRef(RadioButton)
        value="spires"
      >
        SPIRES
      </ForwardRef(RadioButton)>
      <ForwardRef(RadioButton)
        value="freetext"
      >
        free text
      </ForwardRef(RadioButton)>
    </Memo(ForwardRef)>
  </div>
  <div>
    <FreetextExamples />
  </div>
  <div
    className="tc"
  >
    <ExternalLink
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "Group": [Function],
          "__ANT_BUTTON": true,
          "displayName": "Button",
          "render": [Function],
        }
      }
      className="mt3"
      href="https://help.inspirehep.net/knowledge-base/inspire-paper-search"
      type="primary"
    >
      Learn more
    </ExternalLink>
  </div>
</div>
`;

exports[`HowToSearch renders with spires examples by default 1`] = `
<div>
  <div
    className="mb3 tc"
  >
    <Memo(ForwardRef)
      onChange={[Function]}
      value="spires"
    >
      <ForwardRef(RadioButton)
        value="spires"
      >
        SPIRES
      </ForwardRef(RadioButton)>
      <ForwardRef(RadioButton)
        value="freetext"
      >
        free text
      </ForwardRef(RadioButton)>
    </Memo(ForwardRef)>
  </div>
  <div>
    <SpiresExamples />
  </div>
  <div
    className="tc"
  >
    <ExternalLink
      as={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "Group": [Function],
          "__ANT_BUTTON": true,
          "displayName": "Button",
          "render": [Function],
        }
      }
      className="mt3"
      href="https://help.inspirehep.net/knowledge-base/inspire-paper-search"
      type="primary"
    >
      Learn more
    </ExternalLink>
  </div>
</div>
`;
